--- a/Level1-菜鸟/Study/02-数据库基本内容.md
+++ b/Level1-菜鸟/Study/02-数据库基本内容.md
@@ -179,8 +179,126 @@ CREATE TABLE tb_emp3
     depId INT(11),
     salary FLOAT
 );
-
+CREATE TABLE tb_emp4
+(
+    id INT(11),
+    name VARCHAR(25),
+    deptId INT(11),
+    salary FLOAT,
+    PRIMARY KEY(id)
+);
 ```
+
+```mysql
+# 创建表时设置联合主键
+CREATE TABLE tb_emp5
+(
+    name VARCHAR(25),
+    deptId INT(11),
+    salary FLOAT,
+    PRIMARY KEY(name, deptId)
+);
+```
+
+```mysql
+# 修改数据表时设置主键
+ALTER TABLE tb_emp2 ADD PRIMARY KEY(id);
+# 删除主键约束
+ALTER TABLE tb_emp2 DROP PRIMARY KEY;
+```
+
+
+
+#### 外键约束
+
+```mysql
+# 创建表时添加外键约束
+CREATE TABLE tb_dept1
+(
+    id INT(11) PRIMARY KEY,
+    name VARCHAR(22) NOT NULL,
+    location VARCHAR(50)
+);
+CREATE TABLE tb_emp6
+(
+    id INT(11) PRIMARY KEY,
+    name VARCHAR(25),
+    deptId INT(11),
+    salary FLOAT,
+    CONSTRAINT fk_emp_dept1 FOREIGN KEY(deptId) REFERENCES tb_dept1(id)
+);
+```
+
+```mysql
+# 修改表时添加外键约束
+ALTER TABLE tb_emp2 ADD 
+CONSTRAINT fk_tb_dept1 FOREIGN KEY(deptId) REFERENCES tb_dept1(id);
+# 修改表时删除外键约束
+ALTER TABLE tb_emp2 DROP FOREIGN KEY fk_tb_dept1;
+```
+
+
+
+#### 唯一约束
+
+```mysql
+# 创建表时设置唯一约束
+CREATE TABLE tb_dept2
+(
+	id INT(11) PRIMARY KEY,
+    name VARCHAR(22) UNIQUE,
+    location VARCHAR(50)
+);
+```
+
+```mysql
+# 修改表时添加唯一约束
+ALTER TABLE tb_dept1 ADD CONSTRAINT unique_name UNIQUE(name);
+# 修改表时删除唯一约束
+ALTER TABLE tb_dept1 DROP INDEX unique_name;
+```
+
+
+
+#### 检查约束
+
+```mysql
+# 在创建表时，使用 SQL 语句设置检查约束
+CREATE TABLE tb_emp1
+(
+	id INT(11) PRIMARY KEY,
+    name VARCHAR(25),
+    deptId INT(11),
+    salary FLOAT,
+    CHECK (salary > 0 and salary < 100),
+    FOREIGN KEY (deptId) REFERENCES tb_dept1(id)
+);
+```
+
+```mysql
+# 修改表时，添加检查约束
+ALTER TABLE tb_emp7 ADD CONSTRAINT check_id CHECK(id > 0);
+# 修改表时，删除检查约束
+ALTER TABLE tb_emp7 DROP CONSTRAINT check_id;
+```
+
+
+
+### MYSQL 视图操作
+
+
+
+### MYSQL 索引操作
+
+
+
+
+
+### MYSQL 基本运算符
+
+
+
+### MYSQL 常见函数操作
 
 
 
@@ -355,6 +473,7 @@ DESC student
 
 
 
+### MYSQL 数据表数据基本操作
 
 
 
@@ -364,20 +483,148 @@ DESC student
 
 
 
+### JDBC 编程
+
+JDBC 是 Java DataBase Connectivity 的缩写，它是 Java 程序访问数据库的标准接口。
+
+使用 Java 程序访问数据库时，Java 代码并不是直接通过 TCP 连接去访问数据库，而是通过 JDBC 接口来访问，而 JDBC 接口则通过 JDBC 驱动来实现真正对数据库的访问。
+
+数据库厂商提供了标准的JDBC驱动：
+
+```ascii
+┌ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ┐
+
+│  ┌───────────────┐  │
+   │   Java App    │
+│  └───────────────┘  │
+           │
+│          ▼          │
+   ┌───────────────┐
+│  │JDBC Interface │◀─┼─── JDK
+   └───────────────┘
+│          │          │
+           ▼
+│  ┌───────────────┐  │
+   │  JDBC Driver  │◀───── Vendor
+│  └───────────────┘  │
+           │
+└ ─ ─ ─ ─ ─│─ ─ ─ ─ ─ ┘
+           ▼
+   ┌───────────────┐
+   │   Database    │
+   └───────────────┘
+```
+
+实际上，一个 MySQL 的 JDBC 的驱动就是一个 jar 包，它本身也是纯 Java 编写的。我们自己编写的代码只需要引用 Java 标准库提供的 java.sql 包下面的相关接口，由此再间接地通过 MySQL 驱动的 jar 包通过网络访问 MySQL 服务器，所有复杂的网络通讯都被封装到 JDBC 驱动中，因此，Java 程序本身只需要引入一个 MySQL 驱动的 jar 包就可以正常访问 MySQL 服务器：
+
+```ascii
+┌ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ┐
+   ┌───────────────┐
+│  │   App.class   │  │
+   └───────────────┘
+│          │          │
+           ▼
+│  ┌───────────────┐  │
+   │  java.sql.*   │
+│  └───────────────┘  │
+           │
+│          ▼          │
+   ┌───────────────┐     TCP    ┌───────────────┐
+│  │ mysql-xxx.jar │──┼────────▶│     MySQL     │
+   └───────────────┘            └───────────────┘
+└ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ┘
+          JVM
+```
 
 
 
+#### JDBC 连接
+
+JDBC 的一个连接是 Connection ，相当于 Java 程序到数据库的连接，一个 Connection 需要 URL、用户名和口令。
+
+URL是由数据库厂商指定的格式，例如，MySQL的URL是：
+
+```java
+jdbc:mysql://<hostname>:<port>/<db>?key1=value1&key2=value2
+```
+
+假设数据库运行在本机`localhost`，端口使用标准的`3306`，数据库名称是`learnjdbc`，那么URL如下：
+
+```java
+jdbc:mysql://localhost:3306/learnjdbc?useSSL=false&characterEncoding=utf8
+```
+
+后面的两个参数表示不使用 SSL 加密，使用 UTF-8 作为字符编码（注意 MySQL 的 UTF-8 是`utf8`）。
+
+要获取数据库连接，使用如下代码：
+
+```java
+// JDBC连接的URL, 不同数据库有不同的格式:
+String JDBC_URL = "jdbc:mysql://localhost:3306/test";
+String JDBC_USER = "root";
+String JDBC_PASSWORD = "password";
+// 获取连接:
+Connection conn = DriverManager.getConnection(JDBC_URL, JDBC_USER, JDBC_PASSWORD);
+// TODO: 访问数据库...
+// 关闭连接:
+conn.close();
+```
+
+核心代码是`DriverManager`提供的静态方法`getConnection()`。`DriverManager`会自动扫描classpath，找到所有的 JDBC 驱动，然后根据我们传入的 URL 自动挑选一个合适的驱动。
+
+因为 JDBC 连接是一种昂贵的资源，所以使用后要及时释放。使用`try (resource)`来自动释放JDBC连接是一个好方法：
+
+```java
+try (Connection conn = DriverManager.getConnection(JDBC_URL, JDBC_USER, JDBC_PASSWORD)) {
+    ...
+}
+```
 
 
 
+#### JDBC 查询
 
+查询数据库分以下几步：
 
+第一步，通过`Connection`提供的`createStatement()`方法创建一个`Statement`对象，用于执行一个查询；
 
+第二步，执行`Statement`对象提供的`executeQuery("SELECT * FROM students")`并传入SQL语句，执行查询并获得返回的结果集，使用`ResultSet`来引用这个结果集；
 
+第三步，反复调用`ResultSet`的`next()`方法并读取每一行结果。
 
+```java
+// 查询示例
+try (Connection conn = DriverManager.getConnection(JDBC_URL, JDBC_USER, JDBC_PASSWORD)) {
+    try (Statement stmt = conn.createStatement()) {
+        try (ResultSet rs = stmt.executeQuery("SELECT id, grade, name, gender FROM students WHERE gender=1")) {
+            while (rs.next()) {
+                long id = rs.getLong(1); // 注意：索引从1开始
+                long grade = rs.getLong(2);
+                String name = rs.getString(3);
+                int gender = rs.getInt(4);
+            }
+        }
+    }
+}
+```
 
-
-
+```java
+// 通过 PreparedStatement 占位查询
+try (Connection conn = DriverManager.getConnection(JDBC_URL, JDBC_USER, JDBC_PASSWORD)) {
+    try (PreparedStatement ps = conn.prepareStatement("SELECT id, grade, name, gender FROM students WHERE gender=? AND grade=?")) {
+        ps.setObject(1, "M"); // 注意：索引从1开始
+        ps.setObject(2, 3);
+        try (ResultSet rs = ps.executeQuery()) {
+            while (rs.next()) {
+                long id = rs.getLong("id");
+                long grade = rs.getLong("grade");
+                String name = rs.getString("name");
+                String gender = rs.getString("gender");
+            }
+        }
+    }
+}
+```
 
 
 
